# access-w3actdb-api

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: push-to-docker-hub.yml
app/: backend_pre_start.py  main.py
app/crud/: __init__.py  base.py  crud_collection_target.py  crud_target.py  crud_taxonomy.py
app/db/: base.py  session.py
app/middlewarehelper/: starlettehelper.py
app/models/: collection_target.py  field_url.py  organisation.py  subject_target.py  target.py  taxonomy.py  user.py
app/schemas/: __init__.py  collection_target.py  target.py  taxonomy.py
app/templates/: targets.html
